ingress_rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripviewer-web-ingress
  namespace: web-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /(.*)

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripviewer-api-ingress
  namespace: api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi(.*)
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips(.*)
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user(.*)
      - backend:
          serviceName: userjava
          servicePort: 80
        path: /api/user-java(.*)
